# rust-web-fullstack

./: .gitignore  GITHUB_TOKEN_SETUP.md  NGROK_SETUP.md  README.md  start-ngrok.bat  start-ngrok.ps1
.ai/: development-guide.md  project-config.json  task-checklist.md
.github/: copilot-instructions.md
docs/: README.md  项目概述.md
docs/01_需求分析/: 用户故事.md  需求规格说明书.md
frontend/: README.md  package.json
rust-web-backend/: .env  .env.example  Cargo.toml  Dockerfile  README.md  database.db  deploy.sh  docker-compose.yml  init_db.py  init_db.sql
rust-web-backend/data/: doctors.db
rust-web-backend/frontend/: import.html  index.html  medical-weights.html  reports.html  test.html
rust-web-backend/frontend/scripts/: app.js  dashboard.js  doctors.js  import.js  main.js  medical-weights.js  reports.js  scoring.js  weights.js
rust-web-backend/frontend/styles/: main.css  medical-weights.css
rust-web-backend/migrations/: 20241202000001_create_doctors_table.sql  20241202000002_create_medical_weight_configs.sql
rust-web-backend/src/: config.rs  database.rs  main.rs  monitoring.rs
rust-web-backend/src/algorithms/: basic_scoring.rs  classification.rs  config.rs  mod.rs  quality.rs  scoring.rs  trends.rs  trends.rs.new
rust-web-backend/src/handlers/: doctors.rs  doctors.rs.new  doctors.rs.old  import.rs  import_new.rs  import_old.rs  medical_scoring.rs  mod.rs  reports.rs  scores.rs  weights.rs  weights.rs.new  weights.rs.old  weights_new.rs  weights_old.rs
rust-web-backend/src/models/: mod.rs  mod.rs.new  mod.rs.old
rust-web-backend/src/routes/: mod.rs
(+17 files in other folders)
